--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.8",
-    "@angular/cdk": "^17.0.4",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.0.8",
     "@angular/compiler": "^17.0.8",
     "@angular/core": "^17.0.8",
@@ -29,6 +29,7 @@
     "@ngx-translate/core": "15.0.0",
     "@ngx-translate/http-loader": "8.0.0",
     "@popperjs/core": "2.11.8",
+    "@primeng/themes": "^19.0.5",
     "@sweetalert2/ngx-sweetalert2": "^12.2.0",
     "@swimlane/ngx-charts": "^20.5.0",
     "@types/select2": "^4.0.63",
@@ -67,7 +68,7 @@
     "pdfmake": "^0.2.10",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primeng": "^17.13.0",
+    "primeng": "^17.18.15",
     "prism-themes": "1.9.0",
     "prismjs": "^1.29.0",
     "quill": "^2.0.0",
